Fixes #6837: Enable text alignment utility classes on tables
* Removes text-align from td elements (no need to set that one)
* Specifically sets th to text-align: left; at a global level (no longer within .table) to override browser defaults
* Removes font-weight: bold; from th while we're at it since that's browser default already

--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -848,6 +848,10 @@ table {
   border-spacing: 0;
 }
 
+th {
+  text-align: left;
+}
+
 .table {
   width: 100%;
   margin-bottom: 20px;
@@ -857,13 +861,8 @@ table {
 .table td {
   padding: 8px;
   line-height: 20px;
-  text-align: left;
   vertical-align: top;
   border-top: 1px solid #dddddd;
-}
-
-.table th {
-  font-weight: bold;
 }
 
 .table thead th {
